@@ -142,6 +142,10 @@ footer {
         margin-right: $grid-gutter-width / 2;
     }
 
+    .preview .dropdown {
+        width: 250px;
+    }
+
     .meta {
         float: right;
         text-align: right;
@@ -165,7 +169,8 @@ footer {
 
     @media screen and (max-width: $breakpoint-mobile) {
         .actions,
-        .preview {
+        .preview,
+        .preview .dropdown {
             width: 100%;
         }
 
